syntax = "proto3"

package scheduler;

service Scheduler {
    rpc RunProcesses(ProcessQueue) returns(stream GranttNode);  
}

message ScheduleResult {
    int32 total_tat = 1;
    int32 total_wt = 2;
    float average_tat = 3;
    float average_wt = 4;
    repeated GranttNode grantt_chart = 5;
}

message GranttNode {
    int32 pid = 1;
    int32 start = 2;
    int32 end = 3;
}

message ProcessQueue {
    repeated Process queue = 1;
    Algorithm algorithm = 2; 
}

message Process {
    int32 id = 1;
    int32 arrival_time = 2;
    int32 burst_time = 3;
}

enum Algorithm {
    SRTF = 0;
    SJF = 1;
    PRIORITY = 2;
    SRTF = 3;
    PRIORITY_PREEMPTIVE = 4;
    ROUND_ROBIN = 5;
}
