syntax = "proto3";

package scheduler;

service Scheduler {
    rpc RunProcesses(ProcessPayload) returns(stream GranttNode);  
}

message ScheduleResult {
    uint32 total_tat = 1;
    uint32 total_wt = 2;
    float average_tat = 3;
    float average_wt = 4;
    repeated GranttNode grantt_chart = 5;
}

message GranttNode {
    uint32 pid = 1;
    uint32 start = 2;
    uint32 end = 3;
}

message ProcessPayload {
    repeated Process queue = 1;
    Algorithm algorithm = 2; 
    optional int32 quantum = 3;
}

message Process {
    uint32 id = 1;
    uint32 arrival_time = 2;
    uint32 burst_time = 3;
    uint32 priority = 4;
}

enum Algorithm {
    FCFS = 0;
    SJF = 1;
    PRIORITY = 2;
    SRTF = 3;
    PRIORITY_PREEMPTIVE = 4;
    ROUND_ROBIN = 5;
}
